<resources>
    <string name="app_name">AppFormulario</string>
    <string name="titulo">Mi Fomulario</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Teléfono</string>
    <string name="email">Email</string>
    <string name="nacimiento">Fecha de nacimiento</string>
    <string name="descripcion">Descripción</string>
    <string name="titulo2">Confirmar Datos</string>
    <string name="nombre2">Nombre: </string>
    <string name="telefono2">Teléfono: </string>
    <string name="email2">Email: </string>
    <string name="nacimiento2">Fecha de nacimiento: </string>
    <string name="descripcion2">Descripción: </string>
    <string name="btnEditar">Editar datos </string>
    <string name="btnConfirmar">Confirmar datos </string>
</resources>