<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ConfirmarDatos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/titulo"
        android:text="@string/titulo2"
        android:layout_marginTop="@dimen/top"/>

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textSize="@dimen/campos"
        android:layout_marginTop="@dimen/top"/>

    <TextView
        android:id="@+id/tvNacimiento2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nacimiento"
        android:textSize="@dimen/campos"
        android:layout_marginTop="@dimen/top"/>

    <TextView
        android:id="@+id/tvTelefono2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefono"
        android:textSize="@dimen/campos"
        android:layout_marginTop="@dimen/top"/>

    <TextView
        android:id="@+id/tvEmail2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="@dimen/campos"
        android:layout_marginTop="@dimen/top"/>

    <TextView
        android:id="@+id/tvDescripcion2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripcion"
        android:textSize="@dimen/campos"
        android:layout_marginTop="@dimen/top"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnEditar"
        android:layout_marginTop="@dimen/top"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirmar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnConfirmar"
        android:layout_marginTop="@dimen/top"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>