<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/top">
        >

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textStyle="bold"
            android:textSize="@dimen/titulo"/>

        <EditText
            android:id="@+id/tvNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:textColor="@color/greyT"
            android:textSize="@dimen/campos"/>

        <TextView
            android:id="@+id/tvNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nacimiento"
            android:textColor="@color/greyT"
            android:textSize="@dimen/campos"/>

        <DatePicker
            android:id="@+id/tvDate"
            android:datePickerMode="spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/tvTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            android:textColor="@color/greyT"
            android:textSize="@dimen/campos"/>

        <EditText
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="@color/greyT"
            android:textSize="@dimen/campos"/>

        <EditText
            android:id="@+id/tvDescripcion"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:hint="@string/descripcion"
            android:textColor="@color/greyT"
            android:textSize="@dimen/campos"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEnviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enviar"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>